force-app/main/default/objects/Indice_de_Atualizacao_Monetaria__c/Indice_de_Atualizacao_Monetaria__c.object-meta.xml
<CustomObject>
    <label>Índice de Atualização Monetária</label>
    <nameField>
        <label>REF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Índices de Atualização Monetária</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>