force-app/main/default/objects/Indice_de_Atualizacao_Monetaria__c/fields/Indice__c.field-meta.xml
<CustomField>
    <fullName>Indice__c</fullName>
    <label>Índice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mes__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Indice_de_Atualizacao_Monetaria</valueSetName>
    </valueSet>
</CustomField>