force-app/main/default/objects/Indice_de_Atualizacao_Monetaria__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <label>Mês</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>janeiro</fullName>
            </value>
            <value>
                <fullName>fevereiro</fullName>
            </value>
            <value>
                <fullName>março</fullName>
            </value>
            <value>
                <fullName>abril</fullName>
            </value>
            <value>
                <fullName>maio</fullName>
            </value>
            <value>
                <fullName>junho</fullName>
            </value>
            <value>
                <fullName>julho</fullName>
            </value>
            <value>
                <fullName>agosto</fullName>
            </value>
            <value>
                <fullName>setembro</fullName>
            </value>
            <value>
                <fullName>outubro</fullName>
            </value>
            <value>
                <fullName>novembro</fullName>
            </value>
            <value>
                <fullName>dezembro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>