force-app/main/default/objects/Indice_de_Atualizacao_Monetaria__c/fields/Variacao__c.field-meta.xml
<CustomField>
    <fullName>Variacao__c</fullName>
    <label>Variação</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>