force-app/main/default/objects/Indice_de_Atualizacao_Monetaria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data__c</columns>
    <columns>Variacao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Indice__c</field>
        <operation>equals</operation>
        <value>IGPM</value>
    </filters>
    <label>IGPM</label>
</ListView>