force-app/main/default/objects/Indice_de_Atualizacao_Monetaria__c/listViews/IPCAE.listView-meta.xml
<ListView>
    <fullName>IPCAE</fullName>
    <columns>NAME</columns>
    <columns>Data__c</columns>
    <columns>Variacao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Indice__c</field>
        <operation>equals</operation>
        <value>IPCA-E</value>
    </filters>
    <label>IPCA-E</label>
</ListView>